--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "mongo:shell": "docker exec -it mongo-sandbox mongosh"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.12.0",
+    "@mui/styled-engine-sc": "^5.12.0",
     "@next/font": "^13.0.3",
     "axios": "^1.3.5",
     "bcrypt": "^5.1.0",
@@ -22,7 +26,8 @@
     "mongoose": "^6.4.0",
     "next": "13.0.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "styled-components": "^5.3.9"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
