--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "npm run mongo && next dev",
     "test": "vitest",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "mongo": "npm run mongo:restart",
     "mongo:restart": "npm run mongo:stop; npm run mongo:start",
-    "mongo:start": "export DB_NAME=booker && docker run --rm -d -p 27017:27017 --name=mongo-sandbox -e MONGO_INITDB_DATABASE=$DB_NAME mongo:5",
+    "mongo:start": "export DB_NAME=woof && docker run --rm -d -p 27017:27017 --name=mongo-sandbox -e MONGO_INITDB_DATABASE=$DB_NAME mongo:5",
     "mongo:stop": "docker container stop mongo-sandbox",
     "mongo:shell": "docker exec -it mongo-sandbox mongosh"
   },
@@ -23,10 +23,14 @@
     "axios": "^1.3.5",
     "bcrypt": "^5.1.0",
     "iron-session": "^6.3.1",
+    "lodash": "^4.17.21",
     "mongoose": "^6.4.0",
     "next": "13.0.2",
     "react": "18.2.0",
+    "react-animated-heart": "^0.0.7",
     "react-dom": "18.2.0",
+    "react-heart": "^1.0.6",
+    "react-icons": "^4.8.0",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
