--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-dom": "18.2.0",
     "react-heart": "^1.0.6",
     "react-icons": "^4.8.0",
-    "styled-components": "^5.3.9"
+    "styled-components": "^5.3.9",
+    "typeface-roboto": "^1.1.13"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
