--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@next/font": "^13.0.3",
     "axios": "^1.3.5",
     "bcrypt": "^5.1.0",
+    "dns": "^0.1.2",
     "iron-session": "^6.3.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.4.0",
